fix: Use user specified classpath properly.